# semantic-toolchain

./: README.md  pyproject.toml
examples/: example_ontology.yaml
scripts/: dev.sh
stc/: __init__.py  cli.py  config.py
stc/data/: __init__.py  curate.py  filters.py
stc/deploy/: __init__.py  packager.py  runtime.py
stc/emitters/: __init__.py  grammar.py  jsonschema.py  pydantic_models.py  ts_interfaces.py
stc/ontology/: __init__.py  loader.py  models.py  validators.py
stc/tests/: __init__.py  testgen.py
stc/train/: __init__.py  rejection.py  trainer.py
stc/utils/: __init__.py  io.py  logging.py
tests/: generated_tests.py
